--- a/css/all.css
+++ b/css/all.css
@@ -1,2 +1,119 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #333;
+  box-sizing: border-box; }
+
 body {
-  background: blue; }
+  background: #ccc;
+  margin: 30px 50px;
+  line-height: 1.4; }
+
+.btn {
+  background: #333;
+  color: #fff;
+  padding: 0.6rem 1.3rem;
+  text-decoration: none;
+  border: 0; }
+
+img {
+  max-width: 100%; }
+
+.wrapper {
+  display: grid;
+  grid-gap: 20px; }
+
+.main-nav ul {
+  display: grid;
+  grid-gap: 20px;
+  padding: 0;
+  list-style: none;
+  grid-template-columns: repeat(4, 1fr); }
+
+.main-nav a {
+  background: #ddd;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0.8rem;
+  font-size: 1.1rem; }
+
+.main-nav a:hover {
+  background: #333;
+  color: #fff; }
+
+.top-container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-areas: 'showcase showcase top-box-a' 'showcase showcase top-box-b'; }
+
+.showcase {
+  grid-area: showcase;
+  min-height: 400px;
+  background-image: url(../img/2.jpeg);
+  background-position: center;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center; }
+
+.showcase h1 {
+  font-size: 4rem;
+  margin-bottom: 0;
+  color: #fff; }
+
+.showcase p {
+  font-size: 1.3rem;
+  margin-top: 0;
+  color: #fff; }
+
+.top-box {
+  display: grid;
+  background: #ddd;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem; }
+
+.top-box-a {
+  grid-area: top-box-a; }
+
+.top-box .price {
+  font-size: 2.5rem; }
+
+.top-box-b {
+  grid-area: top-box-b; }
+
+.boxes {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
+
+.box {
+  background: red;
+  text-align: center;
+  padding: 1.5rem 2rem; }
+
+.info {
+  background: #ddd;
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 3rem; }
+
+.portfolio {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
+
+.portfolio img {
+  width: 100%; }
+
+.footer {
+  margin-top: 2rem;
+  color: #fff;
+  background: pink;
+  text-align: center;
+  padding: 1rem; }
